--- a/themes/next/source/css/_variables/Gemini.styl
+++ b/themes/next/source/css/_variables/Gemini.styl
@@ -5,7 +5,7 @@
 
 // Settings for some of the most global styles.
 // --------------------------------------------------
-$body-bg-color           = #fff;
+$body-bg-color           = #F8F8FF;
 
 // Borders.
 // --------------------------------------------------
